<resources>
    <string name="app_name">Wallet</string>
    <string name="content_description_profile">foto do perfil</string>
    <string name="title_limit">Limite</string>
    <string name="content_description_credit_card_flag">bandeira visa</string>
    <string name="credit_card_title_name">Nome</string>
    <string name="credit_card_title_expire">VALIDADE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_transfer">Transferência</string>
    <string name="search_hint">Busque por uma pessoa</string>
    <string name="title_contacts">Contatos</string>
    <string name="title_activity_minha">MinhaActivity</string>
    <string name="title_transaction">Transações</string>
    <string name="transaction_entradas">Entradas</string>
    <string name="transaction_saidas">Saídas</string>
    <string name="transaction_title_transfer">Transferir</string>
    <string name="transaction_item_title">Title</string>
    <string name="transaction_item_subtitle">subtitle</string>
    <string name="transaction_item_valor">+ R$ 45</string>
    <string name="transaction_item_header_title">Header</string>
    <string name="home_card_item_limite">Limite</string>
    <string name="home_card_item_valor_limite">R$18,24</string>
    <string name="home_card_item_n1">****</string>
    <string name="home_card_item_n4">1289</string>
    <string name="home_card_item_nome">Nome</string>
    <string name="home_card_item_titular">ATIQUR RAHAMAN</string>
    <string name="home_card_item_validade">Validade</string>
    <string name="home_card_item_data">09/24</string>
    <string name="card_info_servicos">Serviços</string>
    <string name="card_info_btn_transferencia">Transferir</string>
    <string name="card_info_btn_transacoes">Transações</string>
    <string name="card_info_ofertas">Ofertas</string>
    <string name="card_info_descontos">Descontos</string>
    <string name="card_info_limite">Limite</string>
    <string name="home_transacoes">Transações</string>
    <string name="title_pagamento">Pagamento</string>
    <string name="mais_usados">Mais Usados</string>
    <string name="btn_luz_txt">Luz</string>
    <string name="btn_internet_txt">Internet</string>
    <string name="btn_pagamento_txt">Pagamento</string>
    <string name="share_contact">Olá, esses são seus dados: \n Transacação: %1$s \nDo tipo: %2$s \nNo valor de: %3$s</string>
    <string name="btn_qr_code_txt">Ler código</string>
    <string name="btn_print_and_share_txt">Print and Share</string>
    <string name="splash_titulo_txt">Este é um app com fins didáticos, criado usando os recursos:</string>
    <string name="splash_ajuda_txt">Com a ajuda do Denis Felippe (https://github.com/denisfelippe) e Jonatas Araújo (https://github.com/jonatasaraujodh)</string>
</resources>