<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.payment.PaymentFragment">

    <View
        android:id="@+id/background_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_card_top"
        app:layout_constraintBottom_toBottomOf="@id/guide_header"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_pagamento"
        app:titleMarginStart="70dp"
        app:titleTextColor="@color/white">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/foto" />
    </androidx.appcompat.widget.Toolbar>

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/background_card_top"
        android:src="@drawable/ic_arrow_backward"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        style="@style/Widget.DHWallet.SearchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:defaultQueryHint="@string/search_hint"
        app:layout_constraintBottom_toBottomOf="@id/guide_header"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="223dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageButton
        android:id="@+id/btn_luz"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/background_card_info_button_red"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_light_bulb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/btn_luz_txt"
        app:layout_constraintStart_toStartOf="@id/btn_luz"
        app:layout_constraintTop_toBottomOf="@id/btn_luz" />

    <ImageButton
        android:id="@+id/btn_agua"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/background_card_info_button_blue"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_tap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Água"
        app:layout_constraintStart_toStartOf="@id/btn_agua"
        app:layout_constraintTop_toBottomOf="@id/btn_agua" />

    <ImageButton
        android:id="@+id/btn_internet"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/background_card_info_button_green"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_internet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/btn_internet_txt"
        app:layout_constraintStart_toStartOf="@id/btn_internet"
        app:layout_constraintTop_toBottomOf="@id/btn_internet" />

    <ImageButton
        android:id="@+id/btn_pagamento"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="380dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/background_card_info_button_gray"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_money"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_pagamento_txt"
        app:layout_constraintStart_toStartOf="@id/btn_pagamento"
        app:layout_constraintTop_toBottomOf="@id/btn_pagamento" />

    <TextView
        android:id="@+id/title_contact"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/mais_usados"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/guide_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_mais_usados"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_contact"
        tools:itemCount="20"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="775dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>